--- a/index.html
+++ b/index.html
@@ -172,109 +172,114 @@
           </div>
           <!-- Hotel/booking section - Figure out if I need two rows here or not, also what spacing to use -->
           <div class="row">
-            <div class="col-md-2 hotel">
-              <i class="icon-hospital"></i>
-              <h1>Hotel</h1>
-            </div>
-            <div class="col-md-12">
-              <div class="row">
-                <div class="col-md-3">Arrival
-                  <!-- Lifted Bootstrap code from previous version for date-picker - Possibly throw out later? Container may be redundant-->
-                  <div class="container">
-                    <div class="row">
-                      <div class='col-sm-6'>
-                        <div class="form-group">
-                          <div class='input-group date' id='datetimepicker1'>
-                            <input type='text' class="form-control" placeholder="16.07.2015" />
-                            <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"><i class="icon-calendar"></i></span>
-                            </span>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item hotel-bar">
+                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"><i class="icon-hospital"></i>
+                <h1>Hotel</h1></a>
+              </li>
+            </ul>
+            <div class="tab-content hotel-bar d-flex flex-row" id="myTabContent">
+              <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="row">
+                  <div class="col-md-3">Arrival
+                    <div class="tab-content" id="myTabContent">
+                      <div class="container">
+                        <div class="row">
+                          <div class='col-sm-6'>
+                            <div class="form-group">
+                              <div class='input-group date' id='datetimepicker1'>
+                                <input type='text' class="form-control" placeholder="16.07.2015" />
+                                <span class="input-group-addon">
+                                  <span><i class="icon-calendar"></i></span>
+                                </span>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-3">Going
-                  <!-- Lifted Bootstrap code from previous version for date-picker - Possibly throw out later? Container may be redundant-->
-                  <div class="container">
-                    <div class="row">
-                      <div class='col-sm-6'>
-                        <div class="form-group">
-                          <div class='input-group date' id='datetimepicker1'>
-                            <input type='text' class="form-control" placeholder="28.07.2015" />
-                            <span class="input-group-addon">
-                                          <span class="glyphicon glyphicon-calendar"><i class="icon-calendar"></i></span>
-                            </span>
+                      <div class="col-md-3">Going
+                        <!-- Lifted Bootstrap code from previous version for date-picker - Possibly throw out later? Container may be redundant-->
+                        <div class="container">
+                          <div class="row">
+                            <div class='col-sm-6'>
+                              <div class="form-group">
+                                <div class='input-group date' id='datetimepicker1'>
+                                  <input type='text' class="form-control" placeholder="28.07.2015" />
+                                  <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-calendar"><i class="icon-calendar"></i></span>
+                                  </span>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-1">Room
-                  <!-- Redo this area with Bootstrap forms, Form Controls -->
-                  <div class="input-group">
-                    <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
+                      <div class="col-md-1">Room
+                        <!-- Redo this area with Bootstrap forms, Form Controls -->
+                        <div class="input-group">
+                          <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                          <div class="input-group-append">
+                            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                              <div role="separator" class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-1">Person
+                        <div class="input-group">
+                          <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
+                          <div class="input-group-append">
+                            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                              <div role="separator" class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-1">Child
+                        <div class="input-group">
+                          <input type="text" placeholder="1" class="form-control" aria-label="Text input with dropdown button">
+                          <div class="input-group-append">
+                            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                              <div role="separator" class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-1">Day
+                        <div class="input-group">
+                          <input type="text" placeholder="1" class="form-control" aria-label="Text input with dropdown button">
+                          <div class="input-group-append">
+                            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                              <div role="separator" class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-2">
+                        <button type="button" name="button">Search Book</button>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-md-1">Person
-                  <div class="input-group">
-                    <input type="text" placeholder="2" class="form-control" aria-label="Text input with dropdown button">
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-1">Child
-                  <div class="input-group">
-                    <input type="text" placeholder="1" class="form-control" aria-label="Text input with dropdown button">
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-1">Day
-                  <div class="input-group">
-                    <input type="text" placeholder="1" class="form-control" aria-label="Text input with dropdown button">
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div role="separator" class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-2">
-                  <button type="button" name="button">Search Book</button>
                 </div>
               </div>
             </div>
@@ -286,13 +291,13 @@
     <section class="row content-background-one">
       <div class="container">
 
-          <div class="row travel-bar">
-            <div class="col travel-bar-columns">
+          <div class="row travel-bar d-flex justify-content-center">
+            <div class="col-md-3 travel-bar-columns d-flex flex-column justify-content-center align-item-center text-center">
               <img src="img/rollingsuitcase.svg" alt="rolling suitcase">
               <h5 cla>Amazing Travel</h5>
               <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
               <!-- Default dropright button -->
-              <div class="btn-group dropright">
+              <div class="btn-group dropright justify-content-center">
                 <button type="button" class="btn btn-secondary dropdown-toggle background-match" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Read More
                   </button>
@@ -301,13 +306,13 @@
                 </div>
               </div>
             </div>
-            <div class="col travel-bar-columns">
+            <div class="col-md-3 travel-bar-columns d-flex flex-column justify-content-center align-item-center text-center">
               <img src="img/map.svg" alt="map">
               <h5 class="gold">Discover</h5>
               <p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
               <!-- Default dropright button -->
-              <div class="btn-group dropright">
-                <button type="button" class="btn btn-secondary dropdown-toggle gold background-match" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <div class="btn-group dropright justify-content-center">
+                <button type="button" class="btn btn-secondary dropdown-toggle gold background-match text-center" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Read More
                   </button>
                 <div class="dropdown-menu">
@@ -315,12 +320,12 @@
                 </div>
               </div>
             </div>
-            <div class="col travel-bar-columns">
+            <div class="col-md-3 travel-bar-columns d-flex flex-column justify-content-center align-item-center text-center">
               <img src="img/globe.svg" alt="globe">
               <h5>Book Your Trip</h5>
               <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.</p>
               <!-- Default dropright button -->
-              <div class="btn-group dropright">
+              <div class="btn-group dropright justify-content-center">
                 <button type="button" class="btn btn-secondary dropdown-toggle background-match" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Read More
                   </button>
@@ -329,12 +334,12 @@
                 </div>
               </div>
             </div>
-            <div class="col travel-bar-columns">
+            <div class="col-md-3 travel-bar-columns d-flex flex-column justify-content-center align-item-center text-center">
               <img src="img/supporticon.svg" alt="support icon">
               <h5>Nice Support</h5>
               <p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
               <!-- Default dropright button -->
-              <div class="btn-group dropright">
+              <div class="btn-group dropright justify-content-center">
                 <button type="button" class="btn btn-secondary dropdown-toggle background-match" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Read More
                   </button>
@@ -433,7 +438,7 @@
           <!-- News and Announcements Row -->
           <div class="row">
             <!-- News begins here-->
-            <div class="col-md-7">
+            <div class="col-md-7 news">
               <h1>News</h1>
               <div class="row">
       <div class="col">
@@ -502,7 +507,7 @@
             <!-- Announcements begin here -->
             <div class="col-md-5">
               <div class="row">
-                <div class="col">
+                <div class="col announcements">
                   <h1>Announcements</h1>
                   <div class="row">
                     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</h2>
@@ -529,7 +534,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="row">
+                <div class="row products">
                   <h1>Products</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
                   <div class="btn-group dropright">
