Adds media query, attempts to add tab for hotel section but just messes it up!

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
                     </div>
                   </div>
                   <!-- Arrows for carousel - Ask Kyle if we need it? Or if removing this will break it? -->
-                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
                   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
-                    </a>
+                    </a> -->
                 </div>
               </div>
             <!-- Text for on top of carousel - Ask Kyle how to structure this area -->
