Fixes carousel and widget area, fixes some link functionality, adds a contact page (still unfinished), does not address booking area..

--- a/contact.html
+++ b/contact.html
@@ -134,6 +134,75 @@
           </div>
         </div>
       </div>
+      <!-- Location Descriptor -->
+      <div class="row mid-section">
+        <div class="container">
+          <div class="row justify-content-center content-align-center">
+            <h2 class="gold text-uppercase">Where we are</h2>
+            <p class="italic-bolder lead">1300 Blvd Santa Monica, CA 2405 United States</p>
+            <p class="italic-normal">02563234234</p>
+          </div>
+        </div>
+      </div>
+      <!-- Contact Form -->
+      <section class="row content-background-one">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h1>Contact Info</h1>
+              <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestieconsequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihilimperdiet doming id quod mazim placerat facer possim assum.</p>
+                <div class="row">
+                  <div class="col-md-6">
+                    <h6 class="gold">Address:</h6>
+                    <p>795 Fake Ave, Door 6<br />Wonderland, CA 94107, USA</p>
+                  </div>
+                  <div class="col-md-6">
+                    <h6 class="gold">Email:</h6>
+                    <p>info@waxom.com<br />support@waxom.com</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <h6 class="gold">Phone & Fax:</h6>
+                    <p>+440 875369208<br />+440 353363114</p>
+                  </div>
+                  <div class="col-md-6">
+                    <h6 class="gold">Social Network:</h6>
+                    <div class="col-md-12 d-flex align-items-start justify-content-left">
+                      <a href="https://www.facebook.com/" target="_blank"><i class="icon-facebook-squared"></i></a>
+                      <a href="https://twitter.com/"><i class="icon-twitter gold"></i></a>
+                      <a href="https://www.instagram.com/"><i class="icon-instagram"></i></a>
+                      <a href="mailto: info@hellohelp.com"><i class="icon-mail"></i></a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+              <h1>FeedBack</h1>
+              <form>
+                <div class="form-row justify-content-between">
+                  <div class="col-md-12">
+                    <input type="text" class="form-control" placeholder="Your Name">
+                  </div>
+                  <div class="col-md-12">
+                    <input type="email" class="form-control" placeholder="Your Email Address">
+                  </div>
+                  <div class="col-md-12">
+                    <input type="text" class="form-control" placeholder="Your Message">
+                  </div>
+                  <div>
+                    <button type="button" class="btn btn-dark text-uppercase">Send Message</button>
+                  </div>
+                </div>
+              </form>
+
+            </div>
+          </div>
+          <div class="row">
+
+          </div>
+        </div>
+      </section>
       <!-- Footer Section -->
       <footer class="row page-bottom">
         <div class="container d-flex align-items-center justify-content-center">
